Use Optional.orElseThrow() instead of Optional.get()